--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,10 @@ body {
     "Hiragino Sans", sans-serif;
   font-size: 16px;
   color: #333;
+
+  @include screen-mq(sm) {
+    font-size: 14px;
+  }
 }
 
 img {
@@ -83,6 +87,10 @@ section {
   line-height: 1.4375;
   text-transform: uppercase;
   text-align: center;
+
+  @include screen-mq(sm) {
+    font-size: 28px;
+  }
 }
 
 .title-en {
@@ -164,7 +172,12 @@ header {
       font-size: 24px;
       font-weight: bold;
       margin-left: 16px;
+
+      @include screen-mq(sm) {
+        font-size: 20px;
+      }
     }
+
   }
 
   .drawer-nav {
@@ -234,6 +247,11 @@ header {
     background-position: top -130px center;
   }
 
+  @include screen-mq(sm) {
+    padding-top: 80px;
+    padding-bottom: 0;
+  }
+
   .hero__inner {
     display: flex;
     align-items: center;
@@ -248,7 +266,10 @@ header {
 
     @include screen-mq(lg) {
       text-align: center;
-      font-size: 24px;
+    }
+
+    @include screen-mq(sm) {
+      padding-top: 1em;
     }
   }
 
@@ -257,7 +278,6 @@ header {
 
     @include screen-mq(lg) {
       text-align: center;
-      font-size: 40px;
     }
   }
 
@@ -280,6 +300,10 @@ header {
   .hero__image {
     flex: 0 0 518px;
     position: relative;
+
+    @include screen-mq(sm) {
+      flex: 0 0 50%
+    }
   }
 }
 
@@ -287,6 +311,8 @@ header {
 # features
 ============================================================*/
 .features {
+  padding-top: 55px;
+
   .features__item {
     &:nth-child(1) {
       margin-top: 57px;
@@ -370,6 +396,10 @@ header {
     font-size: 28px;
     font-weight: bold;
     text-align: center;
+
+    @include screen-mq(sm) {
+      font-size: 24px;
+    }
   }
 
   .features__flex {
@@ -392,6 +422,10 @@ header {
       @include screen-mq(md) {
         padding: 0;
         margin-top: 1em;
+      }
+
+      @include screen-mq(sm) {
+        font-size: 20px;
       }
     }
 
@@ -449,12 +483,17 @@ header {
           @include screen-mq(sm) {
             width: 160px;
             padding-left: 10px;
+            padding-right: 16px;
           }
         }
 
         &:nth-child(even) {
           border-left: 1px solid #e5e5e5;
           padding-left: 30px;
+
+          @include screen-mq(sm) {
+            padding-left: 10px;
+          }
         }
       }
 
@@ -498,16 +537,16 @@ header {
     font-weight: bold;
     line-height: 1.8571;
 
-    @include screen-mq(md) {
-      font-size: 16px;
-    }
-
     dt {
       display: block;
       text-align: center;
       padding: 18px 0 20px;
       border-top: 1px solid #e5e5e5;
       cursor: pointer;
+
+      @include screen-mq(sm) {
+        padding: 16px;
+      }
     }
 
     dd {
@@ -588,8 +627,8 @@ header {
     height: 100%;
     padding-bottom: 24px;
 
-    @include screen-mq(md) {
-      font-size: 22px;
+    @include screen-mq(sm) {
+      font-size: 16px;
     }
   }
 
@@ -601,8 +640,8 @@ header {
     right: 0;
     padding: 14px 30px 10px 18px;
 
-    @include screen-mq(md) {
-      font-size: 18px;
+    @include screen-mq(sm) {
+      font-size: 14px;
     }
   }
 }
@@ -767,6 +806,13 @@ header {
     textarea {
       width: 100%;
       height: 179px;
+    }
+  }
+
+  .privacyCheck {
+
+    @include screen-mq(sm) {
+      font-size: 12px;
     }
   }
 
